# 2024_Refraction

./: AbstractPoint.h  CMakeLists.txt  RefractionModel.cpp  RefractionModel.h  cartesianPoint.cpp  cartesianPoint.h  pointAxes.h  sphericalPoint.cpp  sphericalPoint.h  ssm_test.txt  test_math.cpp
lib/: CMakeLists.txt  RefractionModel.cpp  RefractionModel.h  analytical.cpp  analytical.h  angle_difference_calculator.cpp  angle_difference_calculator.h  atmospheric_model.h  computational.cpp  computational.h  cubicspline.cpp  cubicspline.h  exponential_model.cpp  exponential_model.h  function1D.h  gost_model.cpp  gost_model.h  layered_model.cpp  layered_model.h  linear.cpp  linear.h  model_rectilinear_propagation.cpp  model_rectilinear_propagation.h  segmented_model.cpp  segmented_model.h
main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: analytical_test.cpp  computational_test.cpp  cubicspline_test.cpp  exponential_model_test.cpp  gost_model_test.cpp  linear_test.cpp  main.cpp  module_test.cpp  segmented_model_test.cpp  test_module.cpp  test_redraction_model.cpp  test_refraction_model.cpp
